Update dependencies and adjust code to conform